--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "dev": "webpack --mode=development --watch",
-    "start:dev": "webpack-dev-server --mode=development",
+    "start": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production"
   },
   "keywords": [],
