--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/core": " 7.2.0",
     "@babel/preset-env": " 7.2.0",
     "babel-loader": " 8.0.4",
-    "clean-webpack-plugin": " 1.0.0",
+    "clean-webpack-plugin": "^1.0.0",
     "mini-css-extract-plugin": " 0.4.5",
     "sass-loader": " 7.3.1"
   },
