--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": " 7.2.0",
-    "@babel/preset-env": " 7.2.0",
-    "babel-loader": " 8.0.4",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
-    "mini-css-extract-plugin": " 0.4.5",
-    "sass-loader": " 7.3.1"
+    "mini-css-extract-plugin": "^0.4.5",
+    "sass-loader": "^7.3.1"
   },
   "dependencies": {
-    "css-loader": " 3.2.0",
-    "gsap": " 2.1.3",
-    "html-webpack-plugin": " 3.2.0",
-    "node-sass": " 4.14.1",
-    "three": " 0.99.0",
-    "three-fbxloader-offical": " 1.0.0",
-    "three-orbitcontrols": " 2.99.1",
-    "three-time": " 0.9.4",
-    "webpack": " 4.27.1",
-    "webpack-cli": " 3.3.11",
-    "webpack-dev-server": " 3.11.0"
+    "css-loader": "^3.2.0",
+    "gsap": "^2.1.3",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.14.1",
+    "three": "^0.99.0",
+    "three-fbxloader-offical": "^1.0.0",
+    "three-orbitcontrols": "^2.99.1",
+    "three-time": "^0.9.4",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
